fix fb share alignment issue on mobile

--- a/app/assets/stylesheets/blog_post.scss
+++ b/app/assets/stylesheets/blog_post.scss
@@ -9,6 +9,7 @@
     height: 24px;
 
     .fb-share-button {
+      display: inline-block;
       vertical-align: top;
       margin-left: 5px;
     }
